[SpringSecurity] feat: UserVO roles 필드 참조타입 수정 기존에는 role의 참조타입이 SimpleGrantedAuthority의 구현타입을 GrantedAuthority의 추상타입으로 변경